--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "tavern_common"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "A common library for tavern's services. It is a way to standardize the requests and responses."
+homepage = "https://github.com/adamkali/Tavern"
+documentation = "in code"
+repository = "https://github.com/adamkali/TavernCommon.git"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
