--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tavern_common"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 license = "MIT"
 description = "A common library for tavern's services. It is a way to standardize the requests and responses."
@@ -14,6 +14,7 @@ repository = "https://github.com/adamkali/TavernCommon.git"
 actix-web = "4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+chrono = { version = "0.4.23", features = ["serde"] }
 
 [dependencies.uuid]
 version = "1.2.2"
