--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ actix-web = "4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4.23", features = ["serde"] }
+argon2 = "0.4"
+rand_core = { version = "0.6", features = ["std"] }
 
 [dependencies.uuid]
 version = "1.2.2"
