--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde_json = "1.0"
 chrono = { version = "0.4.23", features = ["serde"] }
 argon2 = "0.4"
 rand_core = { version = "0.6", features = ["std"] }
+fmt = "0.1.0"
 
 [dependencies.uuid]
 version = "1.2.2"
