--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ chrono = { version = "0.4.23", features = ["serde"] }
 argon2 = "0.4"
 rand_core = { version = "0.6", features = ["std"] }
 fmt = "0.1.0"
+surrealdb = "1.0.0-beta.8"
 
 [dependencies.uuid]
 version = "1.2.2"
