--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tavern_common"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 license = "MIT"
 description = "A common library for tavern's services. It is a way to standardize the requests and responses."
@@ -15,13 +15,13 @@ actix-web = "4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4.23", features = ["serde"] }
-argon2 = "0.4"
+rust-argon2 = "1.0"
 rand_core = { version = "0.6", features = ["std"] }
 fmt = "0.1.0"
 
 [dependencies.uuid]
 version = "1.2.2"
-features = [
+features = [ 
     "v4",                # Lets you generate random UUIDs
     "fast-rng",          # Use a faster (but still sufficiently random) RNG
     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
