--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ rand_core = { version = "0.6", features = ["std"] }
 fmt = "0.1.0"
 sea-orm = "0.10.6"
 log = "0.4.17"
+rayon = "1.0"
+
 
 [features]
 default = []
