--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "arctic_fox"
-version = "0.4.1"
+version = "0.4.2"
 edition = "2021"
 license = "MIT"
 description = "What started as a way to standardize my api requests and responses, turned into a functional programmer's dream. ArcticFox: Arctic from being able to pull out values at any point and 'freeze' the value while computing, F for Functional, and ox for a Box smart pointer. Even though this is not a smart pointer, what it is doing behind the scenes is acting as a layer to always transmit to the code what is being held on the inside."
 
 [dependencies]
-actix-web = { version = "4.0",  optional = true }
+actix-web = { version = "4.0", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4.23", features = ["serde"] }
@@ -16,9 +16,11 @@ fmt = "0.1.0"
 sea-orm = "0.10.6"
 log = "0.4.17"
 rayon = "1.0"
-
+futures = "0.3.25"
 
 [features]
 default = []
-arctic_actix = [ 'dep:actix-web' ]
+actix_web = [ "dep:actix-web" ]
 
+[profile.release]
+strip = "symbols" 
